--- a/index.html
+++ b/index.html
@@ -1,207 +1,186 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Surpresa</title>
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Feliz 2 anos de namoro</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: "Poppins", sans-serif;
-        background: #0a0a0a;
-        color: white;
-        overflow-x: hidden;
-    }
+* { margin:0; padding:0; box-sizing:border-box; }
+body { font-family:'Poppins', Arial, sans-serif; background:#0a0a0f; color:white; overflow-x:hidden; }
 
-    /* --- HERO (primeira tela) --- */
-    #hero {
-        height: 100vh;
-        background: linear-gradient(135deg, #ff2d55, #ff6a95);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        text-align: center;
-        cursor: pointer;
-        transition: opacity .8s ease;
-    }
+/* HERO */
+.hero { height:100vh; background:url('assets/bg-casal.jpg') center/cover no-repeat; position:relative; display:flex; align-items:center; justify-content:center; text-align:center; cursor:pointer; }
+.hero::after { content:''; position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(180deg, rgba(0,0,0,0.6), rgba(0,0,0,0.75)); backdrop-filter:blur(4px); }
+.hero h1 { font-size:3rem; z-index:2; font-weight:600; letter-spacing:1px; animation:fadeIn 2s ease; text-shadow:0 0 15px rgba(255,100,150,0.7); }
 
-    #hero h1 {
-        font-size: 2.8rem;
-        max-width: 80%;
-        animation: pulse 2s infinite;
-    }
+/* PARTICULAS */
+#particles { position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:-1; opacity:0.35; pointer-events:none; }
 
-    @keyframes pulse {
-        0%,100% { transform: scale(1); }
-        50% { transform: scale(1.04); }
-    }
+/* SEÇÕES */
+section { padding:70px 20px; text-align:center; opacity:0; transform:translateY(30px); transition:0.8s ease; }
+section.visible { opacity:1; transform:translateY(0); }
 
-    /* --- SEÇÕES --- */
-    section {
-        padding: 70px 25px;
-        text-align: center;
-    }
+h2 { font-size:2rem; margin-bottom:18px; color:#ff6fa8; text-shadow:0 0 10px rgba(255,120,150,0.4); }
 
-    h2 {
-        font-size: 2.3rem;
-        margin-bottom: 25px;
-        color: #ff6a95;
-    }
+/* CARROSSEL POLAROID */
+.carousel { width:95%; max-width:360px; margin:auto; position:relative; overflow:hidden; border-radius:16px; box-shadow:0 0 25px rgba(255,100,150,0.35); background:#1b1b22; padding-bottom:20px; }
+.carousel-item { display:none; text-align:center; }
+.carousel-item.active { display:block; animation:fadeIn 1.5s ease; }
+.carousel-item img { width:100%; border-radius:16px; }
+.caption { margin-top:10px; font-size:1rem; color:#ffd4e6; padding:0 8px 10px; }
 
-    p {
-        font-size: 1.3rem;
-        line-height: 1.7;
-    }
+/* BOTÕES */
+button { margin-top:20px; padding:14px 24px; background:linear-gradient(135deg,#ff2e74,#ff7ac0); color:white; border:none; border-radius:14px; font-size:1.2rem; cursor:pointer; transition:transform 0.1s, box-shadow 0.3s; box-shadow:0 0 15px rgba(255,80,140,0.4); }
+button:active { transform:scale(0.94); }
 
-    /* --- CARROSSEL --- */
-    .carousel {
-        width: 90%;
-        max-width: 420px;
-        margin: auto;
-        overflow: hidden;
-        border-radius: 12px;
-        border: 4px solid #ff6a95;
-    }
+/* CORAÇÃO PULSANDO */
+.heart { font-size:3.4rem; animation:pulse 1.4s infinite ease-in-out; color:#ff73a5; text-shadow:0 0 15px rgba(255,100,150,0.7); }
 
-    .carousel-images {
-        display: flex;
-        width: 100%;
-        animation: slide 12s infinite;
-    }
-
-    .carousel-images img {
-        width: 100%;
-        object-fit: cover;
-    }
-
-    @keyframes slide {
-        0% { transform: translateX(0); }
-        33% { transform: translateX(-100%); }
-        66% { transform: translateX(-200%); }
-        100% { transform: translateX(0); }
-    }
-
-    /* --- BOTÃO SURPRESA --- */
-    #final-btn {
-        background: #ff2d55;
-        border: none;
-        padding: 18px 40px;
-        border-radius: 40px;
-        font-size: 1.5rem;
-        cursor: pointer;
-        transition: .3s;
-        color: white;
-    }
-
-    #final-btn:hover {
-        transform: scale(1.08);
-        background: #ff4770;
-    }
-
-    /* --- CONFETTI --- */
-    #confetti-message {
-        display: none;
-        font-size: 1.8rem;
-        margin-top: 20px;
-        color: #ff6a95;
-        font-weight: bold;
-    }
-
-    /* --- RESPONSIVIDADE --- */
-    @media (max-width: 600px) {
-        #hero h1 { font-size: 2.2rem; }
-        h2 { font-size: 2rem; }
-        p { font-size: 1.45rem; }
-        #final-btn { font-size: 1.3rem; }
-    }
+/* ANIMAÇÕES */
+@keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
+@keyframes pulse { 0%{transform:scale(1);} 50%{transform:scale(1.25);} 100%{transform:scale(1);} }
 </style>
 </head>
-
 <body>
 
-<!-- ================= HERO ================= -->
-<div id="hero" onclick="startSite()">
-    <h1>Feliz 2 anos de namoro 💗</h1>
+<!-- PARTICULAS -->
+<canvas id="particles"></canvas>
+
+<!-- HERO -->
+<div class="hero" id="hero">
+  <h1>Feliz 2 anos de namoro, meu amor ❤️</h1>
 </div>
 
-<!-- Música -->
-<audio id="music" src="pictures-of-you.mp3"></audio>
+<audio id="bg-music" src="assets/pictures-of-you.mp3" preload="auto"></audio>
 
-<!-- ================= NOSSA HISTÓRIA ================= -->
-<section id="historia" style="display:none;">
-    <h2>Nossa História</h2>
-    <p>Aqui vai o texto que você vai escrever depois 🥰</p>
+<!-- Nossa História -->
+<section id="historia">
+  <h2>Nossa História</h2>
+  <p>Momentos incríveis juntos, aventuras, descobertas, carinho e tudo o que nos trouxe até aqui.</p>
 </section>
 
-<!-- ================= CARROSSEL ================= -->
-<section id="momentos" style="display:none;">
-    <h2>Nossos Momentos</h2>
-
-    <div class="carousel">
-        <div class="carousel-images">
-            <img src="foto1.jpg" alt="">
-            <img src="foto2.jpg" alt="">
-            <img src="foto3.jpg" alt="">
-        </div>
-    </div>
+<!-- Carrossel Nossos Momentos -->
+<section id="momentos">
+  <h2>Nossos Momentos</h2>
+  <div class="carousel" id="carousel">
+    <div class="carousel-item active"><img src="assets/janeiro.jpg" alt="Janeiro"><div class="caption">12/Janeiro - Casa do Rock Bar<br>Um dos primeiros shows de retorno do Rainhas de Marte, e eu sempre te acompanhando!</div></div>
+    <div class="carousel-item"><img src="assets/fevereiro.jpg" alt="Fevereiro"><div class="caption">28/Fevereiro - Madame<br>Fato curioso: Foi um dos dias que você deu PT e deu origem àquele vídeo de você morrendo no metro e dormindo sentado hahaha</div></div>
+    <div class="carousel-item"><img src="assets/março.jpg" alt="Março"><div class="caption">15/Março - Simply Red (Allianz)<br>Fizemos muitas coisas em março, mas viver esse show ao seu lado foi incrível. Muito amor e risadas.</div></div>
+    <div class="carousel-item"><img src="assets/abril.jpg" alt="Abril"><div class="caption">11/Abril - Skylab<br>Não tinha como deixar de fora né? E esse dia foi muito gostoso!</div></div>
+    <div class="carousel-item"><img src="assets/maio.jpg" alt="Maio"><div class="caption">14/Maio - System of a Down<br>Inesquecível tudo o que vivemos naquele show. Ter você ao meu lado deixa tudo mais especial.</div></div>
+    <div class="carousel-item"><img src="assets/junho.jpg" alt="Junho"><div class="caption">14/Junho - Alice Cooper + Madame<br>Nós aproveitamos muito esse dia, foi muito bom fazer essa loucura.</div></div>
+    <div class="carousel-item"><img src="assets/julho.jpg" alt="Julho"><div class="caption">26/Julho - Na minha casa<br>Escolhi essa porque amo nossos momentos de bobeira e caretas.</div></div>
+    <div class="carousel-item"><img src="assets/agosto.jpg" alt="Agosto"><div class="caption">09/Agosto - Na sua mãe<br>Uma das nossas várias fotos no elevador. Me lembra coisas boas.</div></div>
+    <div class="carousel-item"><img src="assets/setembro.jpg" alt="Setembro"><div class="caption">07/Setembro - The Town<br>Muito pouco felizes após o show do Iggy Pop. Que dia.</div></div>
+    <div class="carousel-item"><img src="assets/outubro.jpg" alt="Outubro"><div class="caption">31/10 - Após o show do Michale Graves<br>Amo essa foto. Sua cara de maníaco está A+.</div></div>
+    <div class="carousel-item"><img src="assets/novembro.jpg" alt="Novembro"><div class="caption">15/Novembro - Molchat Doma<br>A gente vira adolescente e faz loucuras. Cada uma vale a pena só por ser contigo.</div></div>
+  </div>
 </section>
 
-<!-- ================= DECLARAÇÃO ================= -->
-<section id="declaracao" style="display:none;">
-    <h2>Declaração da Mari</h2>
-    <p>Você vai escrever sua carta aqui depois 💌</p>
+<!-- Declaração da Mari -->
+<section id="declaracao">
+  <h2>Declaração da Mari</h2>
+  <p>Dois anos ao seu lado parecem um sonho que não acaba. Cada dia, cada momento, cada detalhe...</p>
 </section>
 
-<!-- ================= O QUE AMO EM VOCÊ ================= -->
-<section id="amo" style="display:none;">
-    <h2>Tudo que eu amo em você</h2>
-    <p>Você vai colocar as frases, lista de coisas e talvez fotos.</p>
+<!-- Tudo que amo em você -->
+<section id="amor">
+  <h2>Tudo que eu amo em você</h2>
+  <p>Seu sorriso.</p>
+  <p>Seu jeito bobo.</p>
+  <p>Seu abraço.</p>
 </section>
 
-<!-- ================= FINAL: BOTÃO SURPRESA ================= -->
-<section id="surpresa" style="display:none;">
-    <h2>Surpresa Final</h2>
-
-    <button id="final-btn" onclick="triggerConfetti()">
-        Clique aqui
-    </button>
-
-    <p id="confetti-message">Diga as palavras certas para retirar seu tesouro! 🎁</p>
+<!-- Botão surpresa -->
+<section id="surpresa">
+  <button id="btnSurpresa">Clique aqui</button>
 </section>
 
 <script>
-    function startSite() {
-        // some hero
-        document.getElementById("hero").style.opacity = "0";
+// HERO clique → some + música
+const hero = document.getElementById('hero');
+const music = document.getElementById('bg-music');
+hero.addEventListener('click', ()=>{
+  hero.style.display='none';
+  music.play().catch(()=>{});
+  document.querySelectorAll('section').forEach(s=>s.classList.add('visible'));
+});
 
-        setTimeout(() => {
-            document.getElementById("hero").style.display = "none";
+// CARROSSEL DEVAGAR
+let index=0;
+const items=document.querySelectorAll('.carousel-item');
+setInterval(()=>{
+  items[index].classList.remove('active');
+  index=(index+1)%items.length;
+  items[index].classList.add('active');
+},4000);
 
-            document.getElementById("historia").style.display = "block";
-            document.getElementById("momentos").style.display = "block";
-            document.getElementById("declaracao").style.display = "block";
-            document.getElementById("amo").style.display = "block";
-            document.getElementById("surpresa").style.display = "block";
+// BOTÃO SURPRESA + CONFETE
+const btn=document.getElementById('btnSurpresa');
+btn.addEventListener('click',()=>{
+  confetti();
+  alert('Diga as palavras certas para retirar seu tesouro!');
+});
 
-            // toca música
-            let music = document.getElementById("music");
-            music.volume = 0.7;
-            music.play().catch(() => {});
-        }, 700);
-    }
+// CONFETE (simples e colorido)
+function confetti(){
+  const colors=['#ff2e74','#ff7ac0','#ffd4e6','#ffb3c1'];
+  for(let i=0;i<150;i++){
+    const c=document.createElement('div');
+    c.style.position='fixed';
+    c.style.width='8px';
+    c.style.height='8px';
+    c.style.background=colors[Math.floor(Math.random()*colors.length)];
+    c.style.left=Math.random()*window.innerWidth+'px';
+    c.style.top='-10px';
+    c.style.opacity=Math.random();
+    c.style.borderRadius='50%';
+    c.style.zIndex='9999';
+    c.style.pointerEvents='none';
+    document.body.appendChild(c);
+    let t=Math.random()*3000+2000;
+    let start=0;
+    const fall=setInterval(()=>{
+      start+=5;
+      c.style.top=start+'px';
+      if(start>window.innerHeight){ clearInterval(fall); c.remove(); }
+    },10);
+  }
+}
 
-    function triggerConfetti() {
-        confetti({ particleCount: 200, spread: 120 });
-        document.getElementById("confetti-message").style.display = "block";
-    }
+// PARTICULAS FLUTUANTES
+const canvas=document.getElementById('particles');
+const ctx=canvas.getContext('2d');
+canvas.width=innerWidth; canvas.height=innerHeight;
+const parts=[];
+for(let i=0;i<70;i++){
+  parts.push({x:Math.random()*innerWidth,y:Math.random()*innerHeight,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.6,dy:(Math.random()-0.5)*0.6});
+}
+function anim(){
+  requestAnimationFrame(anim);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  parts.forEach(p=>{
+    ctx.globalAlpha=0.25;
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fillStyle='white';
+    ctx.fill();
+    p.x+=p.dx; p.y+=p.dy;
+    if(p.x<0||p.x>innerWidth)p.dx*=-1;
+    if(p.y<0||p.y>innerHeight)p.dy*=-1;
+  });
+}
+anim();
 
-    // confetti CDN
-    let script = document.createElement("script");
-    script.src = "https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js";
-    document.body.appendChild(script);
+// FADE ao rolar seções
+const sections=document.querySelectorAll('section');
+window.addEventListener('scroll',()=>{
+  sections.forEach(s=>{
+    const top=s.getBoundingClientRect().top;
+    if(top<window.innerHeight-100)s.classList.add('visible');
+  });
+});
 </script>
 
 </body>
