--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 body { font-family:'Poppins', Arial, sans-serif; background:#0a0a0f; color:white; overflow-x:hidden; }
 
 /* HERO */
-.hero { height:100vh; background:url('assets/bg-casal.jpg') center/cover no-repeat; position:relative; display:flex; align-items:center; justify-content:center; text-align:center; cursor:pointer; transition:opacity 1.2s ease; }
+.hero { height:100vh; background:url('assets/bg-casal.jpg') center/cover no-repeat; position:relative; display:flex; align-items:center; justify-content:center; text-align:center; cursor:pointer; }
 .hero::after { content:''; position:absolute; top:0; left:0; width:100%; height:100%; background:linear-gradient(180deg, rgba(0,0,0,0.6), rgba(0,0,0,0.75)); backdrop-filter:blur(4px); }
-.hero h1 { font-size:3rem; z-index:2; font-weight:600; letter-spacing:1px; text-shadow:0 0 15px rgba(255,100,150,0.7); }
+.hero h1 { font-size:3rem; z-index:2; font-weight:600; letter-spacing:1px; animation:fadeIn 2s ease; text-shadow:0 0 15px rgba(255,100,150,0.7); }
 
 /* PARTICULAS */
-#particles { position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:-1; opacity:0.6; pointer-events:none; }
+#particles { position:fixed; top:0; left:0; width:100vw; height:100vh; z-index:-1; opacity:0.35; pointer-events:none; }
 
 /* SEÇÕES */
 section { padding:70px 20px; text-align:center; opacity:0; transform:translateY(30px); transition:0.8s ease; }
@@ -30,20 +30,15 @@ h2 { font-size:2rem; margin-bottom:18px; color:#ff6fa8; text-shadow:0 0 10px rgb
 .carousel-item img { width:100%; border-radius:16px; }
 .caption { margin-top:10px; font-size:1rem; color:#ffd4e6; padding:0 8px 10px; }
 
-/* CONTROLES DO CARROSSEL */
-.carousel-controls { position:absolute; top:50%; width:100%; display:flex; justify-content:space-between; transform:translateY(-50%); pointer-events:none; }
-.carousel-controls button { background:rgba(255,255,255,0.2); color:white; border:none; padding:8px 12px; border-radius:50%; pointer-events:auto; cursor:pointer; }
-.carousel-controls button:hover { background:rgba(255,255,255,0.4); }
-
 /* BOTÕES */
-button#btnSurpresa { margin-top:20px; padding:14px 24px; background:linear-gradient(135deg,#ff2e74,#ff7ac0); color:white; border:none; border-radius:14px; font-size:1.2rem; cursor:pointer; transition:transform 0.1s, box-shadow 0.3s; box-shadow:0 0 15px rgba(255,80,140,0.4); }
-button#btnSurpresa:active { transform:scale(0.94); }
+button { margin-top:20px; padding:14px 24px; background:linear-gradient(135deg,#ff2e74,#ff7ac0); color:white; border:none; border-radius:14px; font-size:1.2rem; cursor:pointer; transition:transform 0.1s, box-shadow 0.3s; box-shadow:0 0 15px rgba(255,80,140,0.4); }
+button:active { transform:scale(0.94); }
 
 /* CORAÇÃO PULSANDO */
 .heart { font-size:3.4rem; animation:pulse 1.4s infinite ease-in-out; color:#ff73a5; text-shadow:0 0 15px rgba(255,100,150,0.7); }
 
 /* MENSAGEM SURPRESA */
-#msgSurpresa { display:none; position:fixed; top:20%; left:50%; transform:translateX(-50%); background:linear-gradient(135deg,#ff2e74,#ff7ac0); padding:24px; border-radius:16px; font-size:1.2rem; color:white; z-index:9999; text-align:center; max-width:90%; box-shadow:0 0 25px rgba(255,80,140,0.4); }
+#msgSurpresa { display:none; font-size:1.2rem; color:#ffbfd7; margin-top:20px; text-shadow:0 0 10px rgba(255,150,200,0.4); }
 
 /* ANIMAÇÕES */
 @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
@@ -76,19 +71,13 @@ button#btnSurpresa:active { transform:scale(0.94); }
     <div class="carousel-item"><img src="assets/fevereiro.jpg" alt="Fevereiro"><div class="caption">28/Fevereiro - Madame<br>Fato curioso: Foi um dos dias que você deu PT e deu origem àquele vídeo de você morrendo no metro e dormindo sentado hahaha</div></div>
     <div class="carousel-item"><img src="assets/março.jpg" alt="Março"><div class="caption">15/Março - Simply Red (Allianz)<br>Fizemos muitas coisas em março, mas viver esse show ao seu lado foi incrível. Muito amor e risadas.</div></div>
     <div class="carousel-item"><img src="assets/abril.jpg" alt="Abril"><div class="caption">11/Abril - Skylab<br>Não tinha como deixar de fora né? E esse dia foi muito gostoso!</div></div>
-    <div class="carousel-item"><img src="assets/maio.jpg" alt="Maio"><div class="caption">14/Maio - System of a Down<br>Inesquecível tudo o que vivemos naquele show. Ter você ao lado deixa tudo mais especial.</div></div>
+    <div class="carousel-item"><img src="assets/maio.jpg" alt="Maio"><div class="caption">14/Maio - System of a Down<br>Inesquecível tudo o que vivemos naquele show. Ter você ao meu lado deixa tudo mais especial.</div></div>
     <div class="carousel-item"><img src="assets/junho.jpg" alt="Junho"><div class="caption">14/Junho - Alice Cooper + Madame<br>Nós aproveitamos muito esse dia, foi muito bom fazer essa loucura.</div></div>
     <div class="carousel-item"><img src="assets/julho.jpg" alt="Julho"><div class="caption">26/Julho - Na minha casa<br>Escolhi essa porque amo nossos momentos de bobeira e caretas.</div></div>
     <div class="carousel-item"><img src="assets/agosto.jpg" alt="Agosto"><div class="caption">09/Agosto - Na sua mãe<br>Uma das nossas várias fotos no elevador. Me lembra coisas boas.</div></div>
     <div class="carousel-item"><img src="assets/setembro.jpg" alt="Setembro"><div class="caption">07/Setembro - The Town<br>Muito pouco felizes após o show do Iggy Pop. Que dia.</div></div>
     <div class="carousel-item"><img src="assets/outubro.jpg" alt="Outubro"><div class="caption">31/10 - Após o show do Michale Graves<br>Amo essa foto. Sua cara de maníaco está A+.</div></div>
     <div class="carousel-item"><img src="assets/novembro.jpg" alt="Novembro"><div class="caption">15/Novembro - Molchat Doma<br>A gente vira adolescente e faz loucuras. Cada uma vale a pena só por ser contigo.</div></div>
-
-    <!-- Controles -->
-    <div class="carousel-controls">
-      <button id="prev">&#10094;</button>
-      <button id="next">&#10095;</button>
-    </div>
   </div>
 </section>
 
@@ -109,43 +98,31 @@ button#btnSurpresa:active { transform:scale(0.94); }
 <!-- Botão surpresa -->
 <section id="surpresa">
   <button id="btnSurpresa">Clique aqui</button>
+  <div id="msgSurpresa">Diga as palavras certas para retirar seu tesouro!</div>
 </section>
 
-<div id="msgSurpresa">Diga as palavras certas para retirar seu tesouro!</div>
-
 <script>
-// HERO clique → fade + música
+// HERO clique → some + música + fade
 const hero = document.getElementById('hero');
 const music = document.getElementById('bg-music');
 hero.addEventListener('click', ()=>{
-  hero.style.transition='opacity 1.2s';
-  hero.style.opacity='0';
-  setTimeout(()=>{ hero.style.display='none'; music.play().catch(()=>{}); document.querySelectorAll('section').forEach(s=>s.classList.add('visible')); },1200);
+  hero.style.transition = 'opacity 1s ease';
+  hero.style.opacity = 0;
+  setTimeout(()=>{ hero.style.display='none'; },1000);
+  music.play().catch(()=>{});
+  document.querySelectorAll('section').forEach(s=>s.classList.add('visible'));
 });
 
-// CARROSSEL DEVAGAR + CONTROLES
+// CARROSSEL DEVAGAR + controles (tocando na tela)
 let index=0;
 const items=document.querySelectorAll('.carousel-item');
-const nextBtn=document.getElementById('next');
-const prevBtn=document.getElementById('prev');
-
-function showSlide(i){
-  items.forEach((el)=>el.classList.remove('active'));
-  index=(i+items.length)%items.length;
+setInterval(()=>{
+  items[index].classList.remove('active');
+  index=(index+1)%items.length;
   items[index].classList.add('active');
-}
+},5000);
 
-let autoSlide=setInterval(()=>{ showSlide(index+1); },5000);
-
-nextBtn.addEventListener('click',()=>{ showSlide(index+1); resetSlide(); });
-prevBtn.addEventListener('click',()=>{ showSlide(index-1); resetSlide(); });
-
-function resetSlide(){
-  clearInterval(autoSlide);
-  autoSlide=setInterval(()=>{ showSlide(index+1); },5000);
-}
-
-// BOTÃO SURPRESA + CONFETE REAL
+// BOTÃO SURPRESA + CONFETE EXPLOSIVO
 const btn=document.getElementById('btnSurpresa');
 const msg=document.getElementById('msgSurpresa');
 btn.addEventListener('click',()=>{
@@ -153,45 +130,65 @@ btn.addEventListener('click',()=>{
   launchConfetti();
 });
 
-// CONFETE REAL
 function launchConfetti(){
-  const colors=['#ff2e74','#ff7ac0','#ffd4e6','#ffb3c1'];
-  for(let i=0;i<200;i++){
-    const c=document.createElement('div');
+  const colors=['#ff2e74','#ff7ac0','#ffd4e6','#ffb3c1','#fffa65','#7df9ff','#9dff9d'];
+  const confCount = 250; // quantidade de confetes
+  const confs = [];
+
+  for(let i=0;i<confCount;i++){
+    const c = document.createElement('div');
     c.style.position='fixed';
-    c.style.width='8px';
-    c.style.height='8px';
+    c.style.width=Math.random()*10+5+'px';
+    c.style.height=Math.random()*10+5+'px';
     c.style.background=colors[Math.floor(Math.random()*colors.length)];
-    c.style.left=Math.random()*window.innerWidth+'px';
-    c.style.top='-10px';
-    c.style.opacity=Math.random();
-    c.style.borderRadius='50%';
+    c.style.left=window.innerWidth/2 + (Math.random()-0.5)*200 + 'px';
+    c.style.top=window.innerHeight/2 + (Math.random()-0.5)*200 + 'px';
+    c.style.opacity=1;
+    c.style.borderRadius=Math.random()>0.5?'50%':'0';
     c.style.zIndex='9999';
     c.style.pointerEvents='none';
     document.body.appendChild(c);
-    let fall=0;
-    const interval=setInterval(()=>{
-      fall+=Math.random()*5+2;
-      c.style.top=fall+'px';
-      c.style.transform=`rotate(${fall*3}deg)`;
-      if(fall>window.innerHeight){ clearInterval(interval); c.remove(); }
-    },16);
+
+    const angle=Math.random()*2*Math.PI;
+    const speed=Math.random()*8+4;
+    const dx=Math.cos(angle)*speed;
+    const dy=Math.sin(angle)*speed;
+    const rotSpeed=(Math.random()-0.5)*0.2;
+
+    confs.push({el:c, x:parseFloat(c.style.left), y:parseFloat(c.style.top), dx, dy, rot:0, rotSpeed});
   }
+
+  let duration=0;
+  const interval=setInterval(()=>{
+    duration+=16;
+    confs.forEach(c=>{
+      c.x+=c.dx; c.y+=c.dy; c.rot+=c.rotSpeed;
+      c.el.style.left=c.x+'px';
+      c.el.style.top=c.y+'px';
+      c.el.style.transform=`rotate(${c.rot}rad)`;
+      c.dy+=0.2;
+      c.el.style.opacity -=0.005; // vai sumindo
+    });
+    if(duration>4000){
+      confs.forEach(c=>c.el.remove());
+      clearInterval(interval);
+    }
+  },16);
 }
 
-// PARTICULAS ROSA FLUTUANTES
+// PARTICULAS FLUTUANTES ROSADAS
 const canvas=document.getElementById('particles');
 const ctx=canvas.getContext('2d');
 canvas.width=innerWidth; canvas.height=innerHeight;
 const parts=[];
-for(let i=0;i<90;i++){
-  parts.push({x:Math.random()*innerWidth,y:Math.random()*innerHeight,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.7,dy:(Math.random()-0.5)*0.7,color:`rgba(255,120,180,0.4)`});
+for(let i=0;i<80;i++){
+  parts.push({x:Math.random()*innerWidth,y:Math.random()*innerHeight,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.7,dy:(Math.random()-0.5)*0.7,color:`rgba(255,100,150,0.5)`});
 }
 function anim(){
   requestAnimationFrame(anim);
   ctx.clearRect(0,0,canvas.width,canvas.height);
   parts.forEach(p=>{
-    ctx.globalAlpha=p.color.split(',')[3].replace(')','');
+    ctx.globalAlpha=0.8;
     ctx.beginPath();
     ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
     ctx.fillStyle=p.color;
